--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,11 +7,10 @@
 $font-family: Montserrat, Inter, Avenir, Helvetica, Arial, sans-serif;
 
 // Colors
-$primary-color: #2563eb;
-$secondary-color: #10b981;
-$accent-color: #f87171;
-$neutral-light: #f3f4f6;
-$neutral-dark: #1f2937;
+$primary-color: #ff6060;
+$secondary-color: #f6f6f6;
+$white: #ffffff;
+$dark: #000000;
 
 // Font sizes
 $font-size-xs: 12px;
