--- a/src/components/atoms/Picture/Picture.module.scss
+++ b/src/components/atoms/Picture/Picture.module.scss
@@ -1,291 +1,5 @@
 @import "../../../styles/variables";
 
-.picture {
-	// Width classes
-	&.w-4 {
-		width: $w-4;
-	}
-	&.w-5 {
-		width: $w-5;
-	}
-	&.w-6 {
-		width: $w-6;
-	}
-	&.w-7 {
-		width: $w-7;
-	}
-	&.w-8 {
-		width: $w-8;
-	}
-	&.w-9 {
-		width: $w-9;
-	}
-	&.w-10 {
-		width: $w-10;
-	}
-	&.w-11 {
-		width: $w-11;
-	}
-	&.w-12 {
-		width: $w-12;
-	}
-	&.w-14 {
-		width: $w-14;
-	}
-	&.w-16 {
-		width: $w-16;
-	}
-	&.w-20 {
-		width: $w-20;
-	}
-	&.w-24 {
-		width: $w-24;
-	}
-	&.w-28 {
-		width: $w-28;
-	}
-	&.w-32 {
-		width: $w-32;
-	}
-	&.w-36 {
-		width: $w-36;
-	}
-	&.w-40 {
-		width: $w-40;
-	}
-	&.w-44 {
-		width: $w-44;
-	}
-	&.w-48 {
-		width: $w-48;
-	}
-	&.w-52 {
-		width: $w-52;
-	}
-	&.w-56 {
-		width: $w-56;
-	}
-	&.w-60 {
-		width: $w-60;
-	}
-	&.w-64 {
-		width: $w-64;
-	}
-	&.w-72 {
-		width: $w-72;
-	}
-	&.w-80 {
-		width: $w-80;
-	}
-	&.w-96 {
-		width: $w-96;
-	}
-	&.w-auto {
-		width: $w-auto;
-	}
-	&.w-1_2 {
-		width: $w-1_2;
-	}
-	&.w-1_3 {
-		width: $w-1_3;
-	}
-	&.w-2_3 {
-		width: $w-2_3;
-	}
-	&.w-1_4 {
-		width: $w-1_4;
-	}
-	&.w-2_4 {
-		width: $w-2_4;
-	}
-	&.w-3_4 {
-		width: $w-3_4;
-	}
-	&.w-1_5 {
-		width: $w-1_5;
-	}
-	&.w-2_5 {
-		width: $w-2_5;
-	}
-	&.w-3_5 {
-		width: $w-3_5;
-	}
-	&.w-4_5 {
-		width: $w-4_5;
-	}
-	&.w-1_6 {
-		width: $w-1_6;
-	}
-	&.w-2_6 {
-		width: $w-2_6;
-	}
-	&.w-3_6 {
-		width: $w-3_6;
-	}
-	&.w-4_6 {
-		width: $w-4_6;
-	}
-	&.w-5_6 {
-		width: $w-5_6;
-	}
-	&.w-full {
-		width: $w-full;
-	}
-	&.w-screen {
-		width: $w-screen;
-	}
-
-	// Height classes
-	&.h-4 {
-		height: $h-4;
-	}
-	&.h-5 {
-		height: $h-5;
-	}
-	&.h-6 {
-		height: $h-6;
-	}
-	&.h-7 {
-		height: $h-7;
-	}
-	&.h-8 {
-		height: $h-8;
-	}
-	&.h-9 {
-		height: $h-9;
-	}
-	&.h-10 {
-		height: $h-10;
-	}
-	&.h-11 {
-		height: $h-11;
-	}
-	&.h-12 {
-		height: $h-12;
-	}
-	&.h-14 {
-		height: $h-14;
-	}
-	&.h-16 {
-		height: $h-16;
-	}
-	&.h-20 {
-		height: $h-20;
-	}
-	&.h-24 {
-		height: $h-24;
-	}
-	&.h-28 {
-		height: $h-28;
-	}
-	&.h-32 {
-		height: $h-32;
-	}
-	&.h-36 {
-		height: $h-36;
-	}
-	&.h-40 {
-		height: $h-40;
-	}
-	&.h-44 {
-		height: $h-44;
-	}
-	&.h-48 {
-		height: $h-48;
-	}
-	&.h-52 {
-		height: $h-52;
-	}
-	&.h-56 {
-		height: $h-56;
-	}
-	&.h-60 {
-		height: $h-60;
-	}
-	&.h-64 {
-		height: $h-64;
-	}
-	&.h-72 {
-		height: $h-72;
-	}
-	&.h-80 {
-		height: $h-80;
-	}
-	&.h-96 {
-		height: $h-96;
-	}
-	&.h-auto {
-		height: $h-auto;
-	}
-	&.h-1_2 {
-		height: $h-1_2;
-	}
-	&.h-1_3 {
-		height: $h-1_3;
-	}
-	&.h-2_3 {
-		height: $h-2_3;
-	}
-	&.h-1_4 {
-		height: $h-1_4;
-	}
-	&.h-2_4 {
-		height: $h-2_4;
-	}
-	&.h-3_4 {
-		height: $h-3_4;
-	}
-	&.h-1_5 {
-		height: $h-1_5;
-	}
-	&.h-2_5 {
-		height: $h-2_5;
-	}
-	&.h-3_5 {
-		height: $h-3_5;
-	}
-	&.h-4_5 {
-		height: $h-4_5;
-	}
-	&.h-1_6 {
-		height: $h-1_6;
-	}
-	&.h-2_6 {
-		height: $h-2_6;
-	}
-	&.h-3_6 {
-		height: $h-3_6;
-	}
-	&.h-4_6 {
-		height: $h-4_6;
-	}
-	&.h-5_6 {
-		height: $h-5_6;
-	}
-	&.h-full {
-		height: $h-full;
-	}
-	&.h-screen {
-		height: $h-screen;
-	}
-
-	// Rounded classes
-	&.none {
-		border-radius: $rounded-none;
-	}
-	&.sm {
-		border-radius: $rounded-sm;
-	}
-	&.md {
-		border-radius: $rounded-md;
-	}
-	&.lg {
-		border-radius: $rounded-lg;
-	}
-	&.xl {
-		border-radius: $rounded-xl;
-	}
-	&.full {
-		border-radius: $rounded-full;
-	}
+.footerLogo {
+	padding-bottom: 29px;
 }
