feat: new changes and HomePage finished

--- a/src/components/atoms/NavItem/NavItem.module.scss
+++ b/src/components/atoms/NavItem/NavItem.module.scss
@@ -1,17 +1,12 @@
 .navItem {
-	/* Styles de base */
 	text-decoration: none;
-	/* Autres styles */
-
-	&.underline:hover {
-		/* Styles au survol */
-		text-decoration: underline;
-		/* Autres styles au survol */
-	}
+	font-weight: bold;
 
 	&.active {
-		/* Styles pour le lien actif */
-		font-weight: bold;
-		/* Autres styles pour le lien actif */
+		text-decoration: underline;
+	}
+
+	&:hover {
+		text-decoration: underline;
 	}
 }
