--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,6 +5,12 @@
 	padding: 0;
 }
 
-:root {
-	padding: 2.5rem 100px;
+body {
+	padding-top: 2.5rem;
+	display: flex;
+	justify-content: center;
+}
+
+#root > *:not(:is(footer)) {
+	max-width: 1240px;
 }
