--- a/src/components/molecules/ImageWithText.tsx/ImageWithText.module.scss
+++ b/src/components/molecules/ImageWithText.tsx/ImageWithText.module.scss
@@ -1,7 +1,15 @@
-.filter {
+.filter > img {
 	filter: brightness(0.5);
 }
 
-.filter-2 {
-	filter: brightness(0.9);
+.gradient {
+	border-radius: 12px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-image: linear-gradient(
+		to bottom,
+		rgba(255, 255, 255, 0) 0%,
+		rgba(0, 0, 0, 0.5) 100%
+	);
 }
