--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -85,10 +85,21 @@ $container-max-widths: (
 $rounded: (
 	none: 0,
 	sm: 0.25rem,
-	md: 0.375rem,
-	lg: 0.5rem,
-	xl: 0.75rem,
+	// 4px
+	md: 0.5rem,
+	// 8px
+	lg: 0.75rem,
+	// 12px
+	xl: 1rem,
+	// 16px
+	xxl: 1.5rem,
+	// 24px
+	xxxl: 2rem,
+	// 32px
+	custom: 3rem,
+	// 48px
 	full: 9999px,
+	// 9999px
 );
 
 //Positions
