--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -131,3 +131,58 @@ $positions: (
 		transform: none,
 	),
 );
+
+// justify-content
+$justify-content: (
+	start: flex-start,
+	end: flex-end,
+	center: center,
+	between: space-between,
+	around: space-around,
+	evenly: space-evenly,
+);
+
+//align-items
+$align-items: (
+	start: flex-start,
+	end: flex-end,
+	center: center,
+	baseline: baseline,
+	stretch: stretch,
+);
+
+//flex-direction
+$flex-direction: (
+	row: row,
+	row-reverse: row-reverse,
+	column: column,
+	column-reverse: column-reverse,
+);
+
+//gap
+$gap-values: (
+	1: 0.25rem,
+	// 4px
+	2: 0.5rem,
+	// 8px
+	3: 0.75rem,
+	// 12px
+	4: 1rem,
+	// 16px
+	5: 1.25rem,
+	// 20px
+	6: 1.5rem,
+	// 24px
+	7: 1.75rem,
+	// 28px
+	8: 2rem,
+	// 32px
+	9: 2.25rem,
+	// 36px
+	10: 2.5rem,
+	// 40px
+	11: 2.75rem,
+	// 44px
+	12: 3rem,
+	// 48px
+);
