fix: some fix and added tag

--- a/src/components/pages/HomePage/HomePage.module.scss
+++ b/src/components/pages/HomePage/HomePage.module.scss
@@ -5,6 +5,6 @@
 	justify-content: center;
 	background-color: #f6f6f6;
 	padding: 56px 50px;
-	margin-top: 43px;
+	margin: 50px 0;
 	border-radius: 25px;
 }
