--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,8 +9,104 @@ $font-family: Montserrat, Inter, Avenir, Helvetica, Arial, sans-serif;
 // Colors
 $primary-color: #ff6060;
 $secondary-color: #f6f6f6;
-$white: #ffffff;
+$light: #ffffff;
 $dark: #000000;
+$colors: (
+	primary: $primary-color,
+	secondary: $secondary-color,
+	light: $light,
+	dark: $dark,
+);
+
+//width
+$width-values: (
+	1: 0.25rem,
+	// 4px
+	2: 0.5rem,
+	// 8px
+	3: 0.75rem,
+	// 12px
+	4: 1rem,
+	// 16px
+	5: 1.25rem,
+	// 20px
+	6: 1.5rem,
+	// 24px
+	7: 1.75rem,
+	// 28px
+	8: 2rem,
+	// 32px
+	9: 2.25rem,
+	// 36px
+	10: 2.5rem,
+	// 40px
+	11: 2.75rem,
+	// 44px
+	12: 3rem,
+	// 48px
+	13: 3.25rem,
+	// 52px
+	14: 3.5rem,
+	// 56px
+	15: 3.75rem,
+	// 60px
+	16: 4rem,
+	// 64px
+	tag: 7.1875rem,
+	// 115px
+	footer: 6.5rem,
+	//122px
+	custom: 21.25rem,
+	//340px
+	custom2: 26rem,
+	//415px
+	full: 100%,
+	screen: 100vw,
+	auto: auto,
+);
+
+//height
+$height-values: (
+	1: 0.25rem,
+	// 4px
+	2: 0.5rem,
+	// 8px
+	3: 0.75rem,
+	// 12px
+	4: 1rem,
+	// 16px
+	5: 1.25rem,
+	// 20px
+	6: 1.5rem,
+	// 24px
+	7: 1.75rem,
+	// 28px
+	8: 2rem,
+	// 32px
+	9: 2.25rem,
+	// 36px
+	10: 2.5rem,
+	// 40px
+	11: 2.75rem,
+	// 44px
+	12: 3rem,
+	// 48px
+	13: 3.25rem,
+	// 52px
+	14: 3.5rem,
+	// 56px
+	15: 3.75rem,
+	// 60px
+	16: 4rem,
+	// 64px
+	custom: 21.25rem,
+	//340px
+	custom2: 26rem,
+	//415px
+	full: 100%,
+	screen: 100vh,
+	auto: auto,
+);
 
 // Font sizes
 $font-sizes: (
