feat: arrow on dropwon

--- a/src/components/atoms/Dropdown/Dropdown.module.scss
+++ b/src/components/atoms/Dropdown/Dropdown.module.scss
@@ -21,3 +21,11 @@
 		scrollbar-width: none;
 	}
 }
+
+.arrow {
+	transition: transform 0.3s ease-in-out;
+
+	&.open {
+		transform: rotate(180deg);
+	}
+}
