feat: Gallery done

--- a/src/components/atoms/Arrow/Arrow.module.scss
+++ b/src/components/atoms/Arrow/Arrow.module.scss
@@ -7,4 +7,12 @@
 	&.down {
 		transform: rotate(180deg);
 	}
+
+	&.left {
+		transform: rotate(-90deg);
+	}
+
+	&.right {
+		transform: rotate(90deg);
+	}
 }
