--- a/src/components/atoms/FadeLoader/FadeLoader.module.scss
+++ b/src/components/atoms/FadeLoader/FadeLoader.module.scss
@@ -4,11 +4,12 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: rgba(0, 0, 0, 0.5);
+	background: rgba(0, 0, 0, 1);
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	animation: fadeout 2s forwards;
+	animation: fadeout 1s forwards ease-in-out;
+	z-index: 1000;
 
 	.loader {
 		border: 16px solid #f3f3f3;
