--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -58,6 +58,8 @@ $width-values: (
 	//340px
 	custom2: 26rem,
 	//415px
+	aboutDropdown: 64.5rem,
+	//1032px
 	full: 100%,
 	screen: 100vw,
 	auto: auto,
@@ -171,27 +173,6 @@ $spacing-values: (
 	dropdown: 250px,
 	custom: 8.7rem,
 	// 139px
-);
-
-//drop-shadow
-$drop-shadow-values: (
-	small: 0px 4px 6px rgba(0, 0, 0, 0.1),
-	medium: 0px 6px 8px rgba(0, 0, 0, 0.1),
-	large: 0px 8px 10px rgba(0, 0, 0, 0.1),
-	x-large: 0px 10px 12px rgba(0, 0, 0, 0.1),
-	xx-large: 0px 12px 14px rgba(0, 0, 0, 0.1),
-	xxx-large: 0px 14px 16px rgba(0, 0, 0, 0.1),
-	jumbo: 0px 16px 18px rgba(0, 0, 0, 0.1),
-	mega: 0px 18px 20px rgba(0, 0, 0, 0.1),
-	custom: 0px 4px 4px 0px rgba(0, 0, 0, 0.4),
-);
-
-// Container
-$container-max-widths: (
-	sm: 640px,
-	md: 768px,
-	lg: 1024px,
-	xl: 1280px,
 );
 
 // Variables pour les coins arrondis
