--- a/src/components/pages/HomePage/HomePage.module.scss
+++ b/src/components/pages/HomePage/HomePage.module.scss
@@ -8,3 +8,18 @@
 	margin: 50px 0;
 	border-radius: 25px;
 }
+
+@keyframes fadeIn {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
+.fadeIn {
+	animation-name: fadeIn;
+	animation-duration: 1s;
+	animation-fill-mode: both;
+}
