fix:some changes on style

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -145,6 +145,12 @@
 	}
 }
 
+@each $key, $value in $align-items {
+	.self-#{$key} {
+		align-self: $value;
+	}
+}
+
 @each $key, $value in $flex-direction {
 	.flex-#{$key} {
 		flex-direction: $value;
