--- a/src/components/molecules/Gallery/Gallery.module.scss
+++ b/src/components/molecules/Gallery/Gallery.module.scss
@@ -8,10 +8,9 @@
 		display: flex;
 		transition: transform 0.5s ease-in-out;
 		width: 100%;
-		height: 100%;
+		height: 415px;
 
 		img {
-			width: 100%;
 			flex-shrink: 0;
 		}
 	}
