fix: font warnings fix

--- a/src/components/pages/HomePage/HomePage.module.scss
+++ b/src/components/pages/HomePage/HomePage.module.scss
@@ -4,7 +4,7 @@
 	gap: 60px;
 	justify-content: center;
 	background-color: #f6f6f6;
-	padding: 56px 50px;
+	padding: 50px;
 	margin: 50px 0;
 	border-radius: 25px;
 }
