--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,10 +1,7 @@
-@font-face {
-	font-family: "Montserrat";
-	src: url("https://fonts.googleapis.com/css2?family=Anton&family=Manrope:wght@400;500;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-}
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 // Font family
-$font-family: Montserrat, Inter, Avenir, Helvetica, Arial, sans-serif;
+$font-family: "Montserrat", sans-serif;
 
 // Colors
 $colors: (
