--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,5 +18,12 @@ body {
 
 header,
 main {
-	margin: 0px 100px; // Change this to the margin you want
+	margin: 0 6rem;
+}
+
+@media screen and (max-width: 768px) {
+	header,
+	main {
+		margin: 0px 20px;
+	}
 }
