--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -57,6 +57,7 @@ $width-values: (
 	//415px
 	aboutDropdown: 64.5rem,
 	//1032px
+	half: 50%,
 	full: 100%,
 	screen: 100vw,
 	auto: auto,
@@ -96,6 +97,8 @@ $height-values: (
 	// 60px
 	16: 4rem,
 	// 64px
+	17: 5rem,
+	// 80px
 	cardMobile: 16rem,
 	//256px
 	cardDekstop: 21.25rem,
@@ -148,6 +151,7 @@ $line-heights: (
 
 // Spacing
 $spacing-values: (
+	0: 0,
 	1: 0.25rem,
 	// 4px
 	2: 0.5rem,
@@ -172,6 +176,10 @@ $spacing-values: (
 	// 44px
 	12: 3rem,
 	// 48px
+	13: 3.25rem,
+	// 52px
+	14: 3.5rem,
+	// 56px
 	dropdown: 250px,
 	custom: 8.7rem,
 	// 139px
@@ -263,38 +271,6 @@ $flex-direction: (
 	row-reverse: row-reverse,
 	column: column,
 	column-reverse: column-reverse,
-);
-
-//gap
-$gap-values: (
-	1: 0.25rem,
-	// 4px
-	2: 0.5rem,
-	// 8px
-	3: 0.75rem,
-	// 12px
-	4: 1rem,
-	// 16px
-	5: 1.25rem,
-	// 20px
-	6: 1.5rem,
-	// 24px
-	7: 1.75rem,
-	// 28px
-	8: 2rem,
-	// 32px
-	9: 2.25rem,
-	// 36px
-	10: 2.5rem,
-	// 40px
-	11: 2.75rem,
-	// 44px
-	12: 3rem,
-	// 48px
-	13: 3.25rem,
-	// 52px
-	14: 3.5rem,
-	// 56px
 );
 
 //overflow
