--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,7 +12,7 @@
 }
 
 body {
-	margin-top: 45px;
+	margin-top: 2.75rem;
 	font-family: $font-family;
 }
 
@@ -24,6 +24,6 @@ main {
 @media screen and (max-width: 768px) {
 	header,
 	main {
-		margin: 0px 20px;
+		margin: 0 1.25rem;
 	}
 }
