--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -193,6 +193,13 @@
 	}
 }
 
+//z-index
+@each $key, $value in $z-index {
+	.z-#{$key} {
+		z-index: $value;
+	}
+}
+
 // Media query
 @each $breakpoint, $min-width in $breakpoints {
 	@media (min-width: $min-width) {
